...

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="Register"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/registerDialogUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:hint="Username"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/registerDialogEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:hint="Email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/registerDialogPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:hint="Password"
        android:inputType="textPassword" />
    <EditText
        android:id="@+id/registerDialogFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:hint="First Name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/registerDialogLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:hint="Last Name"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/registerDialogButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"
        android:text="Register" />
...
