...
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/login_register_button_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_login"
...
                android:background="@color/even_darkest_gray"
                android:text="Login"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <Button
                android:id="@+id/button_register"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:background="@color/even_darkest_gray"
                android:text="Register"
                android:textColor="@color/white"
...
